@@ -19,6 +19,9 @@ dependencies {
 
     // HTTP client for unit tests
     testCompile("org.apache.httpcomponents:fluent-hc:4.5.3")
+
+    // Guava for tests
+    testCompile("com.google.guava:guava:23.1-jre")
 }
 
 tasks {
@@ -29,8 +32,8 @@ tasks {
 
 application {
     // Define the main class for the application
-    mainClassName = "ru.mail.polis.Server"
+    mainClassName = "ru.mail.polis.Cluster"
 
     // And limit Xmx
-    applicationDefaultJvmArgs = listOf("-Xmx1g")
+    applicationDefaultJvmArgs = listOf("-Xmx1g", "-Xverify:none")
 }
